remove unused dep